set(SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/sources)
set(INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/includes)
set(LIBRARY_NAME ${PROJECT_NAME}_core)

file(GLOB SOURCE_FILES ${SOURCE_DIRECTORY}/*.cpp)

add_library(${LIBRARY_NAME} ${SOURCE_FILES})
target_include_directories(${LIBRARY_NAME} PUBLIC ${INCLUDE_DIRECTORY})

set(CORE_LIBRARY ${LIBRARY_NAME} PARENT_SCOPE)
set(CORE_INCLUDE_DIRECTORY ${INCLUDE_DIRECTORY} PARENT_SCOPE)
