set(SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/sources)
set(INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/includes)
set(LIBRARY_NAME ${PROJECT_NAME}_core)

add_library(${LIBRARY_NAME} INTERFACE)
target_include_directories(${LIBRARY_NAME} INTERFACE ${INCLUDE_DIRECTORY})

set(CORE_LIBRARY ${LIBRARY_NAME} PARENT_SCOPE)
set(CORE_INCLUDE_DIRECTORY ${INCLUDE_DIRECTORY} PARENT_SCOPE)
