set(TEST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
set(INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/includes)
set(LIBRARY_NAME ${PROJECT_NAME}_core)

file(GLOB TEST_FILES ${TEST_DIRECTORY}/*.cpp)

add_library(${LIBRARY_NAME} INTERFACE)
target_include_directories(${LIBRARY_NAME} INTERFACE ${INCLUDE_DIRECTORY})
foreach(TEST_FILE ${TEST_FILES})
    get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
    add_executable(${TEST_NAME} ${TEST_FILE})
    target_link_libraries(${TEST_NAME} PRIVATE ${LIBRARY_NAME} Catch2::Catch2WithMain)
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endforeach()

set(CORE_LIBRARY ${LIBRARY_NAME} PARENT_SCOPE)
set(CORE_INCLUDE_DIRECTORY ${INCLUDE_DIRECTORY} PARENT_SCOPE)
